@@ -5,6 +5,8 @@ Changes for Crate Data Admin Interface
 Unreleased
 ==========
 
+ - fix: round percentage of available and underreplicated data correctly
+
  - fixed ui glitch that caused right column content to be cut off
 
  - make table that displays table partitions horizontally scrollable
